--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ p
 
 a
 {
-    background-color: #000066;
+    background-image: linear-gradient(180deg, #000066, #000044);
     color: #ffffff;
 
     font-size: 20px;
