--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body
 {
-    overflow: hidden:
+    overflow: hidden;
     
     background-image: linear-gradient(180deg, #000044, #000022);
     color: white;
