--- a/index.css
+++ b/index.css
@@ -18,6 +18,16 @@ body
     transform: translate(-50%, -50%);
 }
 
+.footer
+{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 10px 0;
+}
+
 img
 {
     border-radius: 75px;
